--- a/desparche/package.json
+++ b/desparche/package.json
@@ -4,10 +4,14 @@
   "private": true,
   "dependencies": {
     "flexboxgrid": "^6.3.1",
+    "google-auth-library": "^2.0.0",
+    "googleapis": "^27.0.0",
+    "mongodb": "^3.1.6",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-flexbox-grid": "^2.1.2",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "readline": "^1.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
